<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.tabs.TabLayout android:id="@+id/tab_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:tabMode="scrollable"
    app:tabGravity="start"
    app:tabTextAppearance="@style/library_tab_style"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.tabs.TabItem
        android:id="@+id/reading_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading_tab"/>
    <com.google.android.material.tabs.TabItem
        android:id="@+id/already_read_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_read_tab"/>
    <com.google.android.material.tabs.TabItem
        android:id="@+id/planning_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planning_tab"/>
    <com.google.android.material.tabs.TabItem
        android:id="@+id/dropped_ta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dropped_tab"/>
</com.google.android.material.tabs.TabLayout>